@@ -34,6 +34,10 @@ Metos3DLoadInit(Metos3D *metos3d)
     // geometry
     PetscInt    nprof   = metos3d->profileCount;
     PetscInt    nvec    = metos3d->vectorLength;
+    
+    
+    
+    
     PetscInt    *istart = metos3d->profileStart;
     PetscInt    *iend   = metos3d->profileEnd;
     // work vars
@@ -41,69 +45,75 @@ Metos3DLoadInit(Metos3D *metos3d)
     PetscInt    *sumvecloc, *sumvecprev, *sumprofloc, *sumprofprev;
     PetscInt    nvecloc, nvecprev, nprofloc, nprofprev;
     PetscInt    *istartloc, *iendloc;
+    
+    
+    
+    
     PetscFunctionBegin;
-//    // debug start
-//    PetscGetTime(&metos3d->startTime[kDebugLevel]);
     // determine process count and my process number
     MPI_Comm_size(comm, &nproc);
     MPI_Comm_rank(comm, &myproc);
     // store
     metos3d->processCount = nproc;
     metos3d->processMine = myproc;
-//    Metos3DDebug(metos3d, kDebugLevel, F2SD, "Metos3DLoadInit", "processCount:", nproc);
-    // compute simple load distribution
-    PetscMalloc(nproc*sizeof(PetscInt), &sumvecloc);
-    PetscMalloc(nproc*sizeof(PetscInt), &sumvecprev);
-    PetscMalloc(nproc*sizeof(PetscInt), &sumprofloc);
-    PetscMalloc(nproc*sizeof(PetscInt), &sumprofprev);
-    // zero memory
-    PetscMemzero(sumvecloc, nproc*sizeof(PetscInt));
-    PetscMemzero(sumvecprev, nproc*sizeof(PetscInt));
-    PetscMemzero(sumprofloc, nproc*sizeof(PetscInt));
-    PetscMemzero(sumprofprev, nproc*sizeof(PetscInt));
-    // compute local first
-    nvecopt = nvec/nproc;
-    iproc   = 0;
-    for (iprof = 0; iprof < nprof; iprof++)
-    {
-        // sum profiles and vector elements per process
-        sumvecloc [iproc] = sumvecloc [iproc] + iend[iprof] - istart[iprof] + 1;
-        sumprofloc[iproc] = sumprofloc[iproc] + 1;
-        if (sumvecloc[iproc] >= nvecopt) iproc++;
-    }
-    // compute previous then
-    sumvecprev [0] = 0;
-    sumprofprev[0] = 0;
-    for (iproc = 1; iproc < nproc; iproc++)
-    {
-        sumvecprev [iproc] = sumvecprev [iproc-1] + sumvecloc [iproc-1];
-        sumprofprev[iproc] = sumprofprev[iproc-1] + sumprofloc[iproc-1];
-    }
-    // compute local indices (1 indexed, same as global)
-    nvecloc   = sumvecloc[myproc];
-    nprofloc  = sumprofloc[myproc];
-    nvecprev  = sumvecprev[myproc];
-    nprofprev = sumprofprev[myproc];
-    // free sums
-    PetscFree(sumvecloc);
-    PetscFree(sumvecprev);
-    PetscFree(sumprofloc);
-    PetscFree(sumprofprev);
-    // alloc memory
-    PetscMalloc(nprofloc*sizeof(PetscInt), &istartloc);
-    PetscMalloc(nprofloc*sizeof(PetscInt), &iendloc);
-    for (iprof = 0; iprof < nprofloc; iprof++)
-    {
-        istartloc[iprof] = istart[iprof+nprofprev] - nvecprev;
-        iendloc  [iprof] = iend  [iprof+nprofprev] - nvecprev;
-    }
-    // store
-    metos3d->vectorLengthLocal      = nvecloc;
-    metos3d->vectorLengthPrevious   = nvecprev;
-    metos3d->profileCountLocal      = nprofloc;
-    metos3d->profileCountPrevious   = nprofprev;
-    metos3d->profileStartLocal      = istartloc;
-    metos3d->profileEndLocal        = iendloc;
+    Metos3DDebug(metos3d, kDebugLevel3, F2SD, "Metos3DLoadInit", "processCount:", nproc);
+    
+    
+    
+//    // compute simple load distribution
+//    PetscMalloc(nproc*sizeof(PetscInt), &sumvecloc);
+//    PetscMalloc(nproc*sizeof(PetscInt), &sumvecprev);
+//    PetscMalloc(nproc*sizeof(PetscInt), &sumprofloc);
+//    PetscMalloc(nproc*sizeof(PetscInt), &sumprofprev);
+//    // zero memory
+//    PetscMemzero(sumvecloc, nproc*sizeof(PetscInt));
+//    PetscMemzero(sumvecprev, nproc*sizeof(PetscInt));
+//    PetscMemzero(sumprofloc, nproc*sizeof(PetscInt));
+//    PetscMemzero(sumprofprev, nproc*sizeof(PetscInt));
+//    // compute local first
+//    nvecopt = nvec/nproc;
+//    iproc   = 0;
+//    for (iprof = 0; iprof < nprof; iprof++)
+//    {
+//        // sum profiles and vector elements per process
+//        sumvecloc [iproc] = sumvecloc [iproc] + iend[iprof] - istart[iprof] + 1;
+//        sumprofloc[iproc] = sumprofloc[iproc] + 1;
+//        if (sumvecloc[iproc] >= nvecopt) iproc++;
+//    }
+//    // compute previous then
+//    sumvecprev [0] = 0;
+//    sumprofprev[0] = 0;
+//    for (iproc = 1; iproc < nproc; iproc++)
+//    {
+//        sumvecprev [iproc] = sumvecprev [iproc-1] + sumvecloc [iproc-1];
+//        sumprofprev[iproc] = sumprofprev[iproc-1] + sumprofloc[iproc-1];
+//    }
+//    // compute local indices (1 indexed, same as global)
+//    nvecloc   = sumvecloc[myproc];
+//    nprofloc  = sumprofloc[myproc];
+//    nvecprev  = sumvecprev[myproc];
+//    nprofprev = sumprofprev[myproc];
+//    // free sums
+//    PetscFree(sumvecloc);
+//    PetscFree(sumvecprev);
+//    PetscFree(sumprofloc);
+//    PetscFree(sumprofprev);
+//    // alloc memory
+//    PetscMalloc(nprofloc*sizeof(PetscInt), &istartloc);
+//    PetscMalloc(nprofloc*sizeof(PetscInt), &iendloc);
+//    for (iprof = 0; iprof < nprofloc; iprof++)
+//    {
+//        istartloc[iprof] = istart[iprof+nprofprev] - nvecprev;
+//        iendloc  [iprof] = iend  [iprof+nprofprev] - nvecprev;
+//    }
+//    // store
+//    metos3d->vectorLengthLocal      = nvecloc;
+//    metos3d->vectorLengthPrevious   = nvecprev;
+//    metos3d->profileCountLocal      = nprofloc;
+//    metos3d->profileCountPrevious   = nprofprev;
+//    metos3d->profileStartLocal      = istartloc;
+//    metos3d->profileEndLocal        = iendloc;
+
     // debug
     Metos3DSynchronizedDebug11(debug, kDebugLevel3, comm, SYNCFS5SD, "Metos3DLoadInit", "myproc:", myproc,
         "nvecloc:", nvecloc, "nvecprev:", nvecprev, "nprofloc:", nprofloc, "nprofprev:", nprofprev);
@@ -119,8 +129,6 @@ PetscErrorCode
 Metos3DLoadFinal(Metos3D *metos3d)
 {
     PetscFunctionBegin;
-//    // debug start
-//    PetscGetTime(&metos3d->startTime[kDebugLevel]);
     // local indices
     PetscFree(metos3d->profileStartLocal);
     PetscFree(metos3d->profileEndLocal);
