@@ -43,6 +43,9 @@ typedef struct {
     PetscInt        moduloStepCount;
     PetscInt        *moduloStep;
     // geometry
+    Mat             Profiles;
+    Vec             rVolumes;
+    
     PetscInt        profileCount;
     PetscInt        *profileStart;
     PetscInt        *profileEnd;
